# solarsim

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  background-title.html  background.html  benchmark_results_hpx.json  benchmark_results_hpx_master.json  benchmark_results_std.json  index.html  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
content/: 01-motivation.md  02-hpx.md  03-solarsim.md  04-results.md  05-next-steps.md  solarsim_architecture_en.drawio
external_ports/: README.md
external_ports/apex/: fix-add-cstdint.patch  portfile.cmake  vcpkg.json
external_ports/hpx/: fix-dependency-hwloc.patch  fix-find-apex-anywhere.patch  portfile.cmake  upstream_version.txt  use-my-apex-fork.patch  vcpkg.json
external_ports/stdexec/: portfile.cmake  upstream_version.txt
include/solarsim/: async_simulator.hpp  barnes_hut_octree.hpp  body_definition.hpp  body_definition_csv.hpp  execution_concepts.hpp  log.hpp  math.hpp  naive_simulator_sync.hpp  namespaces.hpp  simulation_state.hpp  sync_simulator.hpp  types.hpp  types_inlines.hpp
include/solarsim/detail/: config.hpp
include/solarsim/hpx/: async_simulator.hpp  async_simulator_sender.hpp  execution_concepts.hpp  namespaces.hpp
include/solarsim/stdexec/: async_simulator_sender.hpp  namespaces.hpp
lib/css/: app.css  ttf.css
lib/js/: app.js  app.js.LICENSE.txt
snippets/: CMakeLists_hpx_from_git.txt  hpx_cmake.patch
src/: CMakeLists.txt  barnes_hut_octree.cpp  body_definition_csv.cpp  log.cpp  math.cpp  naive_simulator_sync.cpp  sync_simulator.cpp
src/core/: log.cpp
test/: CMakeLists.txt
test/src/: body_definition_csv.cpp
tools/: CMakeLists.txt
tools/src/: benchmark_common.hpp  benchmark_main.cpp  benchmark_main_std.cpp  dataset_conversion.hpp  hpx_main.cpp  std_main.cpp
